# Cubyz-Server-Manager

./: CNAME  README.md  central_api.py  index.html  multi_player_server_count.py  player_count_server.py  script.js  style.css
Scripts/: DEPRECATED_discord_bot.py  backup.sh  central_api.py  csm.py
cubyz_server_manager/: pyproject.toml
cubyz_server_manager/cubyz_server_manager/: csm.py
