[tool.poetry]
name = "cubyz-server-manager"
version = "0.1.1"
description = "Cubyz Server Manager - Tracks players and fall deaths via log parsing"
authors = ["iNiKKo"]
license = "MIT"
readme = "README.md"
packages = [{ include = "cubyz_server_manager" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "*"

[tool.poetry.scripts]
csm = "cubyz_server_manager.csm:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
